[tool.poetry]
name = "start1"
version = "0.1.0"
description = ""
authors = ["humbleAntichrist <167630050+humbleAntichrist@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
